# ChangeLog for dev-python/pdbpp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> pdbpp-0.7.2.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> pdbpp-0.7.2.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> -pdbpp-0.7.ebuild,
  pdbpp-0.7.2.ebuild:
  Keyworded x86.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.7.2.ebuild:
  Keyworded amd64.

*pdbpp-0.7.2 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +pdbpp-0.7.2.ebuild:
  Version bump [435].

  18 May 2011; James Rowe <jnrowe@gmail.com> -pdbpp-0.6.ebuild,
  pdbpp-0.7.ebuild:
  Keyworded x86.

  18 May 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.7.ebuild:
  Keyworded amd64.

  02 May 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.6.ebuild,
  pdbpp-0.7.ebuild:
  Added test to IUSE.

*pdbpp-0.7 (18 Apr 2011)

  18 Apr 2011; James Rowe <jnrowe@gmail.com> +pdbpp-0.7.ebuild:
  Version bump [343].

  04 Apr 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.6.ebuild:
  Keyworded x86.

  03 Apr 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.6.ebuild:
  Keyworded amd64.

  03 Mar 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.6.ebuild:
  Keyworded ~x86.

*pdbpp-0.6 (02 Mar 2011)

  02 Mar 2011; James Rowe <jnrowe@gmail.com> +pdbpp-0.6.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [286].
