@@ -22,9 +22,3 @@ RDEPEND="dev-python/fancycompleter
 	dev-python/pygments"
 
 DOCS=(README)
-
-src_install() {
-	default
-
-	python-distutils-ng_src_install
-}
